# Pruebattpp

./: CMakeLists.txt  Makefile.win  archivo.cpp  archivo.h  archivolecturas.cpp  archivolecturas.h  arista.cpp  arista.h  cola.h  cuento.cpp  cuento.h  escritor.cpp  escritor.h  grafo.cpp  grafo.h  grafo2.cpp  grafo2.h  grafonodo.h  hashing.cpp  hashing.h  historica.cpp  historica.h  hola  lectura.cpp  lectura.h  lecturas.txt  lista.cpp  lista.h  listagrafo.h  main.cpp  main.dev  main.layout  menu.cpp  menu.h  nodo.cpp  nodo.h  novela.cpp  novela.h  parser.h  poema.cpp  (+7 more)
